--- a/packages/ckeditor5-build-classic/重制版.md
+++ b/packages/ckeditor5-build-classic/重制版.md
@@ -1,74 +1,123 @@
-CKEditor 5 自定义构建
+# CKEditor 5 自定义构建
 
-官方文档：
-
-https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html
+> [查看官方文档](https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html)
 
 
-需要
-Node.js 12及以上
-npm 5.7.1及以上
-Git
+### 需要
+
+* Node.js 12及以上 
+* npm 5.7.1及以上
+* Git
 
 
-1. 克隆仓库
+### 克隆仓库
+
 先fork主体仓库
+
 https://github.com/ckeditor/ckeditor5
 
-克隆到本地，总计30多万文件，很慢，请想法提高你的网络技巧
+然后克隆到本地，总计30多万文件，很慢，请想法提高你的网络技巧
+
+```sh
 git clone -b stable git@github.com:<your-username>/ckeditor5.git
+```
 
-进入打包目录
+### 进入目录
+
+```sh
 cd packages/ckeditor5-build-classic
+```
 
-也可以不fork，只克隆主体仓库，但是这样无法保存已有的修改，这里可以只用自己仓库保存修改就可以
-也可以直接使用源代码，但是这样太复杂了
+> 也可以不fork，只克隆主体仓库，但是这样无法保存已有的修改，这里可以只用自己仓库保存修改就可以
+> 也可以直接使用源代码，但是这样太复杂了
 
-2. 文件摘要
-build/ckeditor.js 编译好的包，包含了编辑器和所有插件
-src/ckeditor.js 源文件
-webpack-config.js 配置文件
+### 文件摘要
 
-3. 编译打包
-安装依赖
+* [build/ckeditor.js] - 编译好的包，包含了编辑器和所有插件
+* [src/ckeditor.js] - 源文件
+* [webpack-config.js] - 配置文件
+
+### 编译打包
+
+##### 安装依赖
+
+```sh
 npm install
+```
 
-添加自己要用的依赖包
+##### 添加自己要用的依赖包
+
+```sh
 npm install --save-dev <package-name>
+```
 
+##### 修改源文件
 
-修改源文件
 src/ckeditor.js
 
-找想要的插件
-https://ckeditor.com/docs/ckeditor5/latest/features/index.html
+##### 找想要的插件
 
-找到以后看Installation部分
-安装依赖包：npm install --save @ckeditor/ckeditor5-alignment
-源代码中引入：import Alignment from '@ckeditor/ckeditor5-alignment/src/alignment';
+[https://ckeditor.com/docs/ckeditor5/latest/features/index.html](https://ckeditor.com/docs/ckeditor5/latest/features/index.html)
+
+找到以后看**Installation**部分
+
+安装依赖包：
+
+```sh
+npm install --save @ckeditor/ckeditor5-alignment
+```
+
+源代码中引入：
+
+```sh
+import Alignment from '@ckeditor/ckeditor5-alignment/src/alignment';
+```
+
 在源代码中
-内置插件列表builtinPlugins中加入插件 Alignment
-在工具栏toolbar中加入 alignment
+内置插件列表**builtinPlugins**中加入插件
 
-修改语言
-src/ckeditor.js中修改为：language: 'zh-cn'
-webpack.config.js中修改为：language: 'zh-cn',
+```sh
+Alignment
+```
 
+在工具栏**toolbar**中加入
 
-编译打包
+```sh
+'alignment'
+```
+
+### 修改语言
+
+src/ckeditor.js中修改为：
+
+```sh
+language: 'zh-cn'
+```
+webpack.config.js中修改为：
+
+```sh
+language: 'zh-cn',
+```
+
+### 执行编译打包
+
+```sh
 yarn run build
+```
 
-打包好以后，可以预览一下，打开
-sample/index.html
+### 预览结果
 
-4. 更新
+浏览器打开 **sample/index.html**
+
+### 更新
+
+```sh
 git fetch upstream
 git merge upstream/stable
+```
 
-更新后推荐重新安装依赖
+##### 更新后推荐重新安装依赖
+
+```sh
 rm -rf node_modules && npm install
-
-
-
-
-
+```
